# Smart-Study-Task-Assistant-Bot

./: Dockerfile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml
DjangoProject/: settings.py  urls.py
DjangoProject/settings/: base.py  drf.py  jwt.py  logging.py
backend/: manage.py
backend/DjangoProject/: celery.py  urls.py
backend/DjangoProject/settings/: __init__.py  base.py  logging.py
backend/core/: logging.py
backend/courses/: models.py  views.py
backend/courses/migrations/: 0001_initial.py
backend/notifications/: __init__.py  publisher.py
backend/tasks/: admin.py  formatters.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  telegram.py  urls.py  views.py
backend/tasks/api/: __init__.py  helpers.py  schema.py
backend/tasks/migrations/: 0002_task_topic.py  0003_reminder.py  0004_alter_task_description.py  0005_task_completed_at.py
backend/tasks/services/: messages.py  reminders.py  scheduled.py
backend/tasks/services/habits/: llm.py  (+3 more)
backend/topics/: models.py  serializers.py  urls.py  views.py
backend/topics/migrations/: 0001_initial.py
backend/users/: models.py  serializers.py  urls.py  views.py
backend/users/api/: __init__.py  schema.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_alter_user_created_at.py  0004_alter_user_language_alter_user_timezone.py  0005_user_last_habits_report_at.py  0006_user_email_user_email_verified_and_more.py
backend/users/services/: __init__.py  auth.py
backend/users/tests/: test_auth.py
backend/users/utils/: timezone.py
bot/: bot.py  celery_app.py  celery_tasks.py  commands.py  config.py
bot/formatters/: tasks.py  topics.py
bot/handlers/: courses.py  habits.py  help.py  menu.py  start.py  tasks.py  tasks_helpers.py  topics.py  unknown.py
bot/keyboards/: __init__.py  courses.py  tasks.py  topics.py
bot/services/: courses.py  habits.py  tasks.py  topics.py
bot/states/: courses.py  tasks.py  topics.py
bot/utils/: api_errors.py  auth.py  formatters.py  fsm_guard.py  fsm_helpers.py  http.py  parsers.py  telegram_helpers.py
courses/: serializers.py  urls.py
docs/: architecture.md  tech_spec.md
tasks/: admin.py  models.py  permissions.py  serializers.py  views.py
tasks/migrations/: 0001_initial.py
topics/: models.py  serializers.py
users/: models.py  serializers.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py
