[project]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniil Korobko",email = "“korobko_01@inbox.ru”"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=6.0,<7.0)",
    "psycopg (>=3.3.2,<4.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "ruff (>=0.14.9,<0.15.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "djangorestframework-types (>=0.9.0,<0.10.0)",
    "django-stubs (>=5.2.8,<6.0.0)",
    "mypy-extensions (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
